# _devOS

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  devOS_profile.ps1  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: cd.yml
frontend/: AGENTS.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.tsx  ModalCard.tsx  Navbar.tsx  ORMDiagram.tsx  StyledElements.ts  index.css  index.tsx
snippets/infra/: Dockerfile.frontend  Dockerfile.python.backend  Dockerfile.typescript.backend
snippets/prompts/: AGENTS.md  Backend application copilot instructions.md  Deep Research Framework.md  Full Stack copilot instructions.md  Python modules copilot instructions.md  Tutorials Builder.md  progress.txt  ralph.sh
snippets/python/: .pre-commit-config.yaml  adapters.py  smtp_email_adapter.py  use_cases.py
snippets/python/config/: configs.py  prefect_block_factory_style_config.py  pyproject.toml  simple_config.py  simple_redis_configs.py
snippets/typescript/: DatabaseInterface.ts  index.html  package.json  tailwind.config.js  tsconfig.json
specs/: dao_layout.json  dao_spec.json  project_config.json
src/devOS/: __init__.py  run_server.py  server.py  user_input_map.py
src/devOS/domain/: entities.py
tests/: test_example.py  test_manage_snippets_cli.py  test_run_agent.py  test_services.py  test_sync_contracts.py
tests/samples/: sample_edges.json  sample_endpoints.json  sample_nodes.json
tests/test_specs/: dao_spec_many_to_many.json  endpoints_spec.json  project_config.json
(+42 files in other folders)
