[project]
name = "devOS"
version = "0.1.1"
description = "the development Operating System for building any software project"
readme = "README.md"
authors = [
    { name = "Kesler", email = "uchekesla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dateutils>=0.6.12",
    "fastapi[all]>=0.124.4",
    "git-python>=1.0.3",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "pyperclip>=1.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
]

[project.scripts]
dev = "devOS:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "-v --strict-markers --cov=devOS --cov-report=html"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[[tool.mypy.overrides]]
module = "devOS.*"
ignore_missing_imports = false
